--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -12,7 +12,7 @@ jobs:
 
   teste_jobs:
    name: Executando o job de teste
-   runs-on: self-hosted
+   runs-on: ubuntu-latest
    
    steps:
     - uses: actions/checkout@v3
