--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,8 +15,8 @@ jobs:
    runs-on: ubuntu-latest
    
    steps:
-    - uses: actions/checkout@v3
     - name: Checkout
+      uses: actions/checkout@v3
 
     - name: step 1
       run: echo Olá, rodou
