--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,3 +28,9 @@ jobs:
         password: ${{secrets.DOCKERHUB_PASSWORD}}
 
           
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v6.12.0
+      with:
+        context: ./Automacao.Imagem.Docker/
+        tags: 'latest'
+        push: true
