--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -27,10 +27,9 @@ jobs:
         username: 'thiagomdr3'
         password: ${{secrets.DOCKERHUB_PASSWORD}}
 
-          
     - name: Build and push Docker images
       uses: docker/build-push-action@v6.12.0
       with:
         context: ./Automacao.Imagem.Docker/
-        tags: 'latest'
+        tags: 'thiagomdr3/fiap-githubactions:latest'
         push: true
